--- a/eclipse-projects/spring/spring-atm-custom-events-app/pom.xml
+++ b/eclipse-projects/spring/spring-atm-custom-events-app/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.spring</groupId>
-  <artifactId>spring-event-handling-app</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>spring-event-handling-app</name>
-  <description>Spring app to demonstrate event handling</description>
-  
-  <dependencies>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.spring</groupId>
+	<artifactId>spring-atm-custom-events-app</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>spring-atm-custom-events-app</name>
+	<description>ATM application created using Spring with custom events</description>
+
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -19,7 +19,7 @@
 			<version>${spring.version}</version>
 		</dependency>
 	</dependencies>
-	
+
 	<properties>
 		<spring.version>5.3.19</spring.version>
 	</properties>
